@@ -2,6 +2,13 @@ Revision history for WebService::Idonethis
 
 {{$NEXT}}
 
+    * FEATURE: Allow optional calendar field in ~/.idonethisrc
+               (Courtesy @norbu09, GH #15)
+
+    * BUGFIX: More robust handling of finding calnedar links.
+              We now fall-back to the 'personal' calendar if no
+              other links are found.
+
 0.21      2013-12-08 16:09:05 Australia/Melbourne
 
     * BUGFIX: Fix 'link not found' exception on login.
